Added Activity and address

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,11 +3,13 @@ spring.application.name=playBuddy
 server.port=1234
 
 spring.datasource.driver-class-name= org.hsqldb.jdbc.JDBCDriver
-spring.datasource.url= jdbc:hsqldb:file:D:/myDbFile
+#spring.datasource.url= jdbc:hsqldb:file:D:/myDbFile1
+spring.datasource.url= jdbc:hsqldb:file:D:/playBuddyDb/testDb
 spring.datasource.username= sa
 spring.datasource.password=
 
 
 spring.jpa.database-platform= org.hibernate.dialect.HSQLDialect
 spring.jpa.show-sql= true
-spring.jpa.hibernate.ddl-auto= update
+spring.jpa.hibernate.ddl-auto= create-drop
+spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
