Backend Update for Exception and Response Entity

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,14 +2,40 @@ spring.application.name=playBuddy
 
 server.port=1234
 
-spring.datasource.driver-class-name= org.hsqldb.jdbc.JDBCDriver
-#spring.datasource.url= jdbc:hsqldb:file:D:/myDbFile1
-spring.datasource.url= jdbc:hsqldb:file:D:/playBuddyDb/testDb
-spring.datasource.username= sa
-spring.datasource.password=
+#spring.datasource.driver-class-name= org.hsqldb.jdbc.JDBCDriver
+##spring.datasource.url= jdbc:hsqldb:file:D:/myDbFile1
+#spring.datasource.url= jdbc:hsqldb:file:D:/playBuddyDb/testDb
+#spring.datasource.username= sa
+#spring.datasource.password=
 
-
-spring.jpa.database-platform= org.hibernate.dialect.HSQLDialect
-spring.jpa.show-sql= true
-spring.jpa.hibernate.ddl-auto= create-drop
+#
+#spring.jpa.database-platform= org.hibernate.dialect.HSQLDialect
+#spring.jpa.show-sql= true
+#spring.jpa.hibernate.ddl-auto= create-drop
 spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
+
+#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+#spring.jpa.hibernate.ddl-auto=create-drop
+#spring.jpa.show-sql=true
+#spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+#spring.datasource.username=postgres
+#spring.datasource.password=rohitpostgres
+
+
+# PostgreSQL database connection settings
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.username=postgres
+spring.datasource.password=rohitpostgres
+#spring.datasource.driverClassName=org.postgresql.Driver
+
+# JPA/Hibernate settings
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+# Connection Pool Configuration
+spring.datasource.hikari.maximum-pool-size=10
+spring.datasource.hikari.minimum-idle=5
+spring.datasource.hikari.idle-timeout=30000
+spring.datasource.hikari.connection-timeout=30000
